@@ -1,3 +1,7 @@
+2010-05-28  Jeremy Hankins <nowan@nowan.org>
+	* lisp/sawfish/wm/util/prompt.jl: Fix compilation error
+	                 -- [Harald van Dijk]
+
 2010-05-23  Christopher Roy Bratusek <zanghar@freenet.de>
 	* man/sawfish.texi
 	* src/events.c
